# ops-switchd-p4container-plugin

./: .gitmodules  .gitreview  AUTHORS  DESIGN.md  Makefile.am  README.md  autogen.sh  configure.ac  main.c
include/: netdev-p4-sim.h  netdev-sim.h  ofproto-p4-sim-provider.h  ofproto-sim-provider.h  ops-routing.h  p4-switch.h
src/: netdev-p4-sim.c  netdev-sim.c  ofproto-p4-sim-provider.c  ofproto-sim-provider.c  p4-sim-plugins.c  p4-switch.c  sim-plugins.c
switch/p4src/: Makefile.am  acl.p4
switch/p4src/includes/: p4features.h
switch/switchapi/inc/switchapi/: switch_base_types.h
switch/switchapi/src/: switch_interface.c  switch_pd.c
switch/switchsai/json/: saiacl.json  saihostintf.json
switch/switchsai/src/: sai-param-check.c  sailag.c  saipolicer.c
tests/: dual_switch_test.py  test_switchd_container_ct_ecmp_static.py  test_switchd_container_ct_l2_trunk_lag.py
